<package format="2">
  <name>tf_switch_node</name>
  <version>0.1.0</version>
  <description>ROS 2 node for switching between different transformations.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>